fix: book page not centered

--- a/assets/css/components/_library.scss
+++ b/assets/css/components/_library.scss
@@ -98,7 +98,3 @@
         }
     }
 }
-
-#book-page {
-    margin: 1rem 0;
-}
